2008-08-28  Sancho Lerena <slerena@artica.es>

        * pandora_console/operation/reporting/graph_viewer.php: Fixed dimensions of graph
        view


2007-08-27  Sancho Lerena <slerena@artica.es>

	* operation/agentes/ver_agente.php: Truncated too long agent names.

	* operation/agentes/tactical.php: Fixed BUG: not initializated modules are now
	correctly viewed.

	* godmode/agentes/manage_config.php: Fixed BUG: copying modules also create
	status record and some minor issues with visualization.

	* godmode/agentes/configurar_agente.php: Truncated too long agent names.

2007-08-26  Raul Mateos  <raulofpandora@gmail.com>

	* upgrade.php, install.php: Corrected small typo and tag errors.


2007-08-23  Sancho Lerena  <slerena@gmail.com>

	* datos_agente.php: Fix delete button for String data.

	* pandoradbdata_12_to_13.sql, pandoradb_data.sql: Fixed some problems with 
	network components, and network	templates.

	* README: Updated doc with Guick Install Guide.

	* godmode/agentes/agent_template.php: Fixed BUG #1770888.

	* godmode/agentes/configurar_agente.php: Fixed BUG# 1770895.

	* godmode/agentes/agent_manager.php: Fixed BUG# 1770895 and other new bug not 
	identified when creating an agent and try to access some items.


2007-08-22  Sancho Lerena  <slerena@gmail.com>

	* pandoradb_data.sql: Fixed undetermined problem with alert data load 
	(rewritten in simple format), and removed all languages until finish 
	official documentation.

	This should be last commit before beta2 (I hope!)

2007-08-21  Sancho Lerena  <slerena@artica.es>

	* install.php: Fixed heigh in step3 box.

	* upgrade.php: Typo at title in step1.

2007-08-20  Sancho Lerena  <slerena@artica.es>

        * pandoradb.sql: Used UTF-8 by default

	* index.php. UTF-8 Default.
	
	* README: Updated texts for Readme.
	
	* INSTALL: Deteled old stuff
	
	* upgrade.php: Links fixed.
	
	* migrate.php renamed to upgrade.php

	* Deleted old upgrade scripts from 1.1

	* Updated install.php.
