@@ -1,8 +1,12 @@
+
+2008-08-29  Sancho Lerena <slerena@artica.es>
+
+        * include/config.inc.php: Change defaults to avoid problems with attachments.
+
 2008-08-28  Sancho Lerena <slerena@artica.es>
 
         * pandora_console/operation/reporting/graph_viewer.php: Fixed dimensions of graph
         view
-
 
 2007-08-27  Sancho Lerena <slerena@artica.es>
 
